Complete final draft

--- a/index.html
+++ b/index.html
@@ -70,12 +70,34 @@
             <div class="column small">
                 <img src="resources/images/img-news-bite.png" alt="imgbite">
                 <div class="smallcontent">
-                    <h1>NEWS BITES</h1>
-                    <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+                    <h2>NEWS BITES</h2>
+                    <div class="newbites">
+                        <span class="bitespan">Cat Emoji Goes Viral</span>
+                        <Span class="bitespan">Buy Youtube Views</Span>
+                        <span class="bitespan">Home Business Advertising Ideas</span>
+                        <span class="bitespan">Advertising Internet Online</span>
+                        <span class="bitespan">Illustration in Marketing Materials</span>
+                        <span class="bitespan">Finally a Top Secret Way You Can</span>
+                    </div>
                 </div>
             </div>
             
         </div>
+
+        <footer>
+            <div class="botinfo">
+                <Span class="bottitle">My Times&nbsp&nbsp&nbsp&nbsp|</Span>
+                <nav class="botnav">
+                    <span><a href="">World</a></span>
+                    <span><a href="">U.S.</a></span>
+                    <span><a href="">Tech</a></span>
+                    <span><a href="">Science</a></span>
+                </nav>
+            </div>
+            <div class="copyright">
+                <span>&copy 2016, My Times (A Division of Codecademy bite)</span>
+            </div>
+        </footer>
     </body>
 
 </html>
